# subsync-ptbr

./: .commitmsg  .gitignore  .releasenotes  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  windows.spec
assets/dictmk/scripts/: dict_tools.py  wiki_convert.py
doc/: architecture.md
gizmo/general/: logger.cpp  notifier.h
gizmo/math/: line.cpp
gizmo/media/: audiodec.cpp  demux.cpp  resampler.cpp  resampler.h  speechrec.cpp  speechrec.h  stream.cpp  subdec.cpp
gizmo/text/: dictionary.cpp  utf8.cpp  utf8.h
resources/: subsync.wxs
subsync/: __main__.py  cli.py  cmdargs.py  config.py.template  error.py  loggercfg.py  settings.py  subtitle.py
subsync/assets/: item.py
subsync/data/: languages.py
subsync/gui/: outpatternwin.py  settingswin.py  subpanel.py  syncwin.py
subsync/gui/layout/: outpatternwin.py
subsync/synchro/: dictionary.py  encdetect.py  output.py  speech.py
