[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "subsync"
version = "0.20.0"
description = "Subtitle Speech Synchronizer"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.10"
authors = [
    {name = "Michał Szymaniak", email = "sc0typl@gmail.com"},
]
dependencies = [
    "certifi",
    "pysubs2>=1.6",
    "pycryptodome>=3.19;platform_system!='Darwin'",
    "cryptography>=41.0;platform_system=='Darwin'",
    "PyYAML>=6.0",
    "pybind11>=2.11",
    "requests>=2.31",
    "vosk>=0.3.45",
]

[project.optional-dependencies]
gui = ["wxPython>=4.2"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
subsync = "subsync.__main__:subsync"

[project.urls]
Homepage = "https://github.com/sc0ty/subsync"

[tool.setuptools.packages.find]
include = ["subsync*"]

[tool.setuptools.package-data]
subsync = [
    "key.pub",
    "img/*.png",
    "img/*.ico",
    "locale/*/LC_MESSAGES/*.mo",
]
